prepare draft of booking system

--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,11 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
+
+DB_USER=user
+DB_PASSWORD=password
+DB_HOST=database.internal
+DB_PORT=5432
+DB_NAME=app_test
+
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?serverVersion=15&charset=utf8
