--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -8,3 +8,8 @@ api_platform:
             vary: ['Content-Type', 'Authorization', 'Origin']
         extra_properties:
             standard_put: true
+    swagger:
+        api_keys:
+            access_token:
+                name: X-API-TOKEN
+                type: header
