--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -7,4 +7,9 @@ nelmio_cors:
         expose_headers: ['Link']
         max_age: 3600
     paths:
+        '^/api/':
+            allow_origin: ['*']
+            allow_headers: ['X-API-TOKEN']
+            allow_methods: ['POST', 'OPTIONS', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
         '^/': null
