Add possibility for filter acancies by available places and given date range

--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -13,3 +13,9 @@ nelmio_cors:
             allow_methods: ['POST', 'OPTIONS', 'PUT', 'GET', 'DELETE']
             max_age: 3600
         '^/': null
+        '^/login':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['POST']
+            max_age: 3600
+
