fix reservation logic, add cors and api platform settings

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -13,3 +13,6 @@ api_platform:
             access_token:
                 name: X-API-TOKEN
                 type: header
+    collection:
+        pagination:
+            enabled_parameter_name: pagination 
