--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -9,7 +9,7 @@ nelmio_cors:
     paths:
         '^/api/':
             allow_origin: ['*']
-            allow_headers: ['X-API-TOKEN']
+            allow_headers: ['X-API-TOKEN', 'Content-Type', 'Authorization']
             allow_methods: ['POST', 'OPTIONS', 'PUT', 'GET', 'DELETE']
             max_age: 3600
         '^/': null
