--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -8,6 +8,7 @@ api_platform:
             vary: ['Content-Type', 'Authorization', 'Origin']
         extra_properties:
             standard_put: true
+        pagination_client_enabled: true
     swagger:
         api_keys:
             access_token:
